...
    role === SETUP_ROLES.NANNY
      ? '/(private)/(tabs)/hours'
      : '/(private)/(tabs)/schedule'
  ) as Href;

  return (
    <View testID="today-this-week-card">
      <Section
        title={t('thisWeek.title')}
        right={
          <Icon
            icon={ChevronRight}
            size={18}
...
